add sentiment and ipynb lesson 3

--- a/ipynb/lesson3-text-mining.ipynb
+++ b/ipynb/lesson3-text-mining.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lesson 4 // Text mining"
+    "# Lesson 3 // Text mining"
    ]
   },
   {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -149,9 +149,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "“`as.tibble()` is deprecated, use `as_tibble()` (but mind the new semantics).\n",
+      "\u001b[90mThis warning is displayed once per session.\u001b[39m”"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -184,7 +193,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
